--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+	"homepage": "hhtps://tushan-2003.github.io/demo-ecom",
 	"name": "dummy-ecommerce",
 	"version": "0.1.0",
 	"private": true,
@@ -15,6 +16,8 @@
 	},
 	"scripts": {
 		"start": "craco start",
+		"predeploy": "npm run build",
+		"deploy": "gh-pages -d build",
 		"build": "craco build",
 		"test": "craco test",
 		"eject": "craco eject"
@@ -99,7 +102,8 @@
 		"@semantic-ui-react/craco-less": "^3.0.0",
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/react": "^12.1.5",
-		"@testing-library/user-event": "^13.5.0"
+		"@testing-library/user-event": "^13.5.0",
+		"gh-pages": "^6.2.0"
 	},
 	"jest": {
 		"clearMocks": true,
